Clean
Signed-off-by: Bertrand Rix <bertrand.rix@artelys.com>